--- a/docs/glfwug.tex
+++ b/docs/glfwug.tex
@@ -94,9 +94,7 @@ to remedy this by providing the following functionality:
 \item Opening and managing an \OpenGL\ window.
 \item Keyboard, mouse and joystick input.
 \item A high precision timer.
-\item Multi threading support.
 \item Support for querying and using \OpenGL\ extensions.
-\item Image file loading support.
 \end{itemize}
 \vspace{18pt}
 
@@ -152,8 +150,7 @@ void glfwTerminate( void )
 \end{lstlisting}
 
 Among other things, \textbf{glfwTerminate} closes the \OpenGL\ window
-unless it was closed manually, and kills any running threads that were
-created using \GLFW .
+unless it was closed manually.
 
 
 %-------------------------------------------------------------------------
@@ -1060,125 +1057,6 @@ immediately, without putting the thread to sleep.
 
 
 %-------------------------------------------------------------------------
-% Image and Texture Import
-%-------------------------------------------------------------------------
-\chapter{Image and Texture Import}
-\thispagestyle{fancy}
-In many, if not most, \OpenGL\ applications you want to use pre-generated
-2D images for surface textures, light maps, transparency maps etc.
-Typically these images are stored with a standard image format in a file,
-which requires the program to decode and load the image(s) from file(s),
-which can require much work from the programmer.
-
-To make life easier for \OpenGL\ developers, \GLFW\ has built-in support
-for loading images from files.
-
-
-%-------------------------------------------------------------------------
-\section{Texture Loading}
-To load a texture from a file, you can use the function
-\textbf{glfwLoadTexture2D}:
-
-\begin{lstlisting}
-int glfwLoadTexture2D( const char *name, int flags )
-\end{lstlisting}
-
-This function reads a 2D image from a Truevision Targa format file (.TGA)
-with the name given by \textit{name}, and uploads it to texture memory.
-It is similar to the \OpenGL\ function \textbf{glTexImage2D}, except that
-the image data is read from a file instead of from main memory, and all
-the pixel format and data storage flags are handled automatically. The
-\textit{flags} argument can be used to control how the texture is
-loaded.
-
-If \textit{flags} is GLFW\_ORIGIN\_UL\_BIT, the origin of the
-texture will be the upper left corner (otherwise it is the lower left
-corner). If \textit{flags} is GLFW\_BUILD\_MIPMAPS\_BIT, all mipmap levels
-will be generated and uploaded to texture memory (otherwise only one
-mipmap level is loaded). If \textit{flags} is GLFW\_ALPHA\_MAP\_BIT, then
-any gray scale images will be loaded as alpha maps rather than luminance
-maps.
-
-To make combinations of the flags, or them together (e.g. like this:
-\texttt{GLFW\_ORIGIN\_UL\_BIT | GLFW\_BUILD\_MIPMAPS\_BIT}).
-
-Here is an example of how to upload a texture from a file to \OpenGL\
-texture memory, and configure the texture for trilinear interpolation
-(assuming an \OpenGL\ window has been opened successfully):
-
-\begin{mysamepage}[10]
-\begin{lstlisting}
-    // Load texture from file, and build all mipmap levels
-    glfwLoadTexture2D( "mytexture.tga", GLFW_BUILD_MIPMAPS_BIT );
-
-    // Use trilinear interpolation for minification
-    glTexParameteri( GL_TEXTURE_2D, GL_TEXTURE_MIN_FILTER,
-                     GL_LINEAR_MIPMAP_LINEAR );
-
-    // Use bilinear interpolation for magnification
-    glTexParameteri( GL_TEXTURE_2D, GL_TEXTURE_MAG_FILTER,
-                     GL_LINEAR );
-
-    // Enable texturing
-    glEnable( GL_TEXTURE_2D );
-\end{lstlisting}
-\end{mysamepage}
-
-As you can see, \textbf{glfwLoadTexture2D} is very easy to use. Since it
-can also automatically create mipmaps when required, it is also a very
-powerful function.
-
-
-%-------------------------------------------------------------------------
-\section{Image Loading}
-In certain cases it may be useful to be able to load an image into client
-memory (application memory), without directly uploading the image to
-\OpenGL\ texture memory. For example, one may wish to retain a copy of the
-texture in local memory for future use. Another example is when the image
-is not to be used as a texture at all, e.g. if it is to be used as a
-height map.
-
-\GLFW\ also offers the possibility to load an image to application memory,
-using the \textbf{glfwReadImage} function:
-
-\begin{lstlisting}
-int glfwReadImage( const char *name, GLFWimage *img, int flags )
-\end{lstlisting}
-
-The function reads the image given by the argument \textit{name}, and upon
-success stores the relevant image information and pixel data in the
-GLFWimage structure \textit{img}. The GLFWimage structure is defined as:
-
-\begin{lstlisting}
-typedef struct {
-    int Width, Height;    // Image dimensions
-    int Format;           // OpenGL pixel format
-    int BytesPerPixel;    // Number of bytes per pixel
-    unsigned char *Data;  // Pointer to pixel data
-} GLFWimage;
-\end{lstlisting}
-
-\textit{Data} points to the loaded pixel data. If the function loaded the
-image successfully, GL\_TRUE is returned, otherwise GL\_FALSE is returned.
-
-Possible flags for the \textit{flags} argument are GLFW\_ORIGIN\_UL\_BIT,
-GLFW\_NO\_RESCALE\_BIT and GLFW\_ALPHA\_MAP\_BIT. GLFW\_ORIGIN\_UL\_BIT
-and GLFW\_ALPHA\_MAP\_BIT work as described for the \textbf{glfwLoadTexture2D}
-function. If the GLFW\_NO\_RESCALE\_BIT flag is set, the image will not be
-rescaled to the closest larger $2^m\times 2^n$ resolution, which is
-otherwise the default action for images with non-power-of-two dimenstions.
-
-When an image that was loaded with the \textbf{glfwReadImage} function is
-not used anymore (e.g. when it has been uploaded to texture memory), you
-should use the function \textbf{glfwFreeImage} to free the allocated
-memory:
-
-\begin{lstlisting}
-void glfwFreeImage( GLFWimage *img )
-\end{lstlisting}
-
-
-%-------------------------------------------------------------------------
 % OpenGL Extension Support
 %-------------------------------------------------------------------------
 \chapter{OpenGL Extension Support}
@@ -1408,612 +1286,6 @@ typedef void (APIENTRY * GLGETCOMPRESSEDTEXIMAGEARB_T)
              (GLenum target, GLint level, void *img);
 \end{lstlisting}
 
-
-
-%-------------------------------------------------------------------------
-% Multi Threading
-%-------------------------------------------------------------------------
-\chapter{Multi Threading}
-\thispagestyle{fancy}
-Multi threading may not seem to be related to \OpenGL , and thus it may
-seem to be out of the scope of \GLFW\ to provide multi threading support.
-The initial intent of \GLFW\ was to provide the very basic functionality
-needed to create an \OpenGL\ application, but as \GLFW\ grew to be a
-platform for portable \OpenGL\ applications, it felt natural to include an
-operating system independent multi threading layer in \GLFW . Hopefully
-this will make \GLFW\ more attractive for advanced \OpenGL\ developers, as
-well as inspire more programmers to use multi threading.
-
-In this chapter you will learn about multi threading and how you can use
-\GLFW\ to create multi threaded applications.
-
-
-%-------------------------------------------------------------------------
-\section{Why Use Multi Threading?}
-Multi threading is not a new technology, neither is it an advanced
-technology. In fact, multi threading could be found as early as 1985 in
-consumer computers, namely the Amiga, whose operating system implemented
-preemptive multi threading. During the early and mid 90's, consumer level
-operating systems emerged for Intel based PCs that supported multi
-threading. Still, over a decade later, many programmers, especially game
-programmers, feel reluctant to using threading in their applications.
-Why?
-
-There are probably many reasons that one can think of to avoid multi
-threading, but many of them are based on ignorance and myths. The foremost
-reason for not using multi threading is probably that it requires a new
-way of thinking, but once accepted, threaded programming can take your
-program to new performance levels and solve many problematic timing and
-synchronization issues.
-
-In the following sections a few key reasons for using multi threaded
-programming will be presented.
-
-
-%-------------------------------------------------------------------------
-\subsection{Take advantage of multi processor systems}
-If an application is divided into several threads that can execute
-concurrently, these threads will automatically execute on separate
-processors in parallel on an SMP (symmetric multi-processing) system.
-
-Multi processor platforms are becoming increasingly common, in many
-different forms. The classic multi processor system is based around several
-processor chips that execute in parallel. More recent solutions focus on
-placing several processor cores on a single chip. These cores may be
-a few identical general purpose processors, or they may be several smaller,
-specialized cores, such as in the Cell architecture by IBM, which is
-used in the Playstation~3 game console.
-
-Another emerging technology known as SMT (symmetric multi threading) is
-also becoming more and more popular. In short, it takes a single physical
-processor, and divides it into several logical processors that can execute
-separate threads. The idea behind this is to better utilize all available
-CPU resources by running independent pieces of code on the same physical
-CPU.
-
-The problem with SMP systems is of course that if an application is not
-multi threaded, only one of the available processors will actually be
-used to execute the application. This is probably the most important
-aspect of multi threading. For SMP systems to be really useful, programs
-\emph{must} be multi threaded.
-
-
-%-------------------------------------------------------------------------
-\subsection{Avoid unnecessary waiting}
-In many situations, an application is placed in a wait state, waiting for
-a task to complete. Examples of such situations are: waiting for a file to
-load from disk, waiting for a vertical retrace (when using a double
-buffered display, such as a \GLFW\ \OpenGL\ window), waiting for a display
-to be cleared or data to be sent to the graphic card.
-
-Some or all of these operations can be done asynchronously, if the
-conditions are right and the operating system supports it, but a simple
-and efficient way of avoiding unnecessary waits is to use multi threading.
-If there are several active threads in an application, a thread that was
-waiting for CPU time can start running as soon as another thread enters a
-wait state. This will speed up an application on both single and multi
-processor systems.
-
-
-%-------------------------------------------------------------------------
-\subsection{Improve real time performance}
-It is a known fact that an application becomes more responsive and
-exhibits less timing problems if different jobs are assigned to separate
-threads.
-
-A typical example is streaming audio: when an audio buffer is empty, it
-has to be filled with new sound again within a limited amount of time, or
-strange sound loops or clicks may be the result. If a program is
-displaying graphics, loading files and playing audio at the same time (a
-typical game), it is very difficult to guarantee that the program will
-update the audio buffers in time if everything is performed in a single
-thread. On the other hand, if the audio buffer is updated from a separate
-thread, it becomes a very simple task.
-
-
-%-------------------------------------------------------------------------
-\section{How To Use Multi Threading}
-In general, every program runs as a process, which has its own memory
-space and its own set of resources, such as opened files etc. As a
-consequence, each process is coupled with a fairly large set of state.
-When the processor changes the execution from one process to another
-process, all this state has to be changed too (this is often referred to
-as a context switch), which can be quite costly.
-
-Threads are sometimes referred to as ``lightweight processes'', which
-gives you a clue of what they are. In contrast to a process, a thread is a
-separate execution path within a process, which shares the same memory
-area and resources. This means that very little state has to be changed
-when switching execution between different threads (basically only the
-stack pointer and the processor registers). It also means that data
-exchange between threads is very simple, and there is little or no
-overhead in exchanging data, since program variables and data areas can be
-shared between threads.
-
-Writing threaded applications may be very awkward before you get used to
-it, but there are a few key rules that are fairly simple to follow:
-
-\begin{enumerate}
-\item ALWAYS assure exclusive access to data that is shared between threads!
-\item Make sure that threads are synchronized properly!
-\item NEVER busy wait!
-\end{enumerate}
-
-In the following sections you will learn how to use the functionality of
-\GLFW\ to create threads and meet these rules, and hopefully you will find
-that it is not very difficult to write a multi threaded application.
-
-
-%-------------------------------------------------------------------------
-\section{Creating Threads}
-Creating a thread in \GLFW\ is very simple. You just call the function
-\textbf{glfwCreateThread}:
-
-\begin{lstlisting}
-GLFWthread glfwCreateThread( GLFWthreadfun fun, void *arg )
-\end{lstlisting}
-
-The argument \textit{fun} is a pointer to a function that will be
-executed by the new thread, and \textit{arg} is an argument that is passed
-to the thread. \textbf{glfwCreateThread} returns a positive thread ID
-number if the thread was created successfully, or a negative number if the
-thread could not be created.
-
-When the thread function returns, the thread will die. In most cases, you
-want to know when the thread has finished. A thread can wait for another
-thread to die with the command \textbf{glfwWaitThread}:
-
-\begin{lstlisting}
-int glfwWaitThread( GLFWthread ID, int waitmode )
-\end{lstlisting}
-
-The argument \textit{ID} is the thread handle that was obtained when
-creating the thread. If \textit{waitmode} is GLFW\_NOWAIT,
-\textbf{glfwWaitThread} will return immediately with the value GL\_TRUE if
-the thread died, or GL\_FALSE if it is still alive. This can be useful if
-you only want to check if the thread is alive. If \textit{waitmode} is
-GLFW\_WAIT, \textbf{glfwWaitThread} will wait until the specified thread
-has died. Regardless of what \textit{waitmode} is, \textbf{glfwWaitThread}
-will return immediately if the thread does not exist (e.g. if the thread
-has already died or if ID is an invalid thread handle).
-
-In some situations, you may want to brutally kill a thread without waiting
-for it to finish. This can be done with \textbf{glfwDestroyThread}:
-
-\begin{lstlisting}
-void glfwDestroyThread( GLFWthread ID )
-\end{lstlisting}
-
-It should be noted that \textbf{glfwDestroyThread} is a very dangerous
-operation, which may interrupt a thread in the middle of an important
-operation, which can result in lost data or deadlocks (when a thread is
-waiting for a condition to be raised, which can never be raised). In other
-words, do not use this function unless you really have to do it, and if
-you really know what you are doing (and what the thread that you are
-killing is doing)!
-
-To sum up what we have learned so far, here is an example program which
-will print ``Hello world!'' (error checking has been left out for
-brevity):
-
-\begin{mysamepage}[20]
-\begin{lstlisting}
-#include <stdio.h>
-#include <GL/glfw.h>
-
-void GLFWCALL HelloFun( void *arg )
-{
-    printf( "Hello " );
-}
-
-int main( void )
-{
-    GLFWthread thread;
-
-    glfwInit();
-    thread = glfwCreateThread( HelloFun, NULL );
-    glfwWaitThread( thread, GLFW_WAIT );
-    printf( "world!\n" );
-    glfwTerminate();
-
-    return 0;
-}
-\end{lstlisting}
-\end{mysamepage}
-
-The program starts by initializing \GLFW , as always, and then it goes on
-by creating a thread that will execute the function \texttt{HelloFun}. The
-main thread then waits for the created thread to do its work and finish.
-Finally the main thread prints ``world!'', terminates \GLFW\ and exits.
-The result is that ``Hello world!'' will be printed in the console window.
-
-You may have noticed that we have already used a simple form of thread
-synchronization, by waiting for the child thread to die before we print
-``world!''. If we would have placed the wait command after the print
-command, there would be no way of knowing which word would be printed
-first (``Hello'' or ``world!''). Our program would then suffer from a race
-condition, which is a term used to describe a situation where two (or
-more) threads are competing to complete a task first.
-
-In section \ref{par:condvar} you will learn how to do advanced thread
-synchronization using condition variables, which let threads wait for
-certain conditions before continuing execution.
-
-
-%-------------------------------------------------------------------------
-\section{Data Sharing Using Mutex Objects}
-In many situations you need to protect a certain data area while reading
-or modifying it, so that other threads do not start changing or reading
-the data while you are only half way through.
-
-For instance, consider that you have a vector \textit{vec}, and a variable
-\textit{N} telling how many elements there are in the vector. What happens
-if thread $A$ adds an element to the vector at the same time as thread $B$
-is removing an element from the vector? Figure \ref{fig:nomutex} shows a
-possible scenario.
-
-\begin{figure}[p]
-\begin{center}
-\begin{tabular}{cc}
-\textbf{Thread A} & \textbf{Thread B}\\
-\begin{minipage}{7cm}
-\lstset{backgroundcolor=\color{codeA}}
-\vspace{0.5\baselineskip}
-\begin{lstlisting}
-N ++;
-\end{lstlisting}
-\end{minipage}
-&
-\textit{waiting to exectue}
-\\
-
-\textit{waiting to exectue}
-&
-\begin{minipage}{7cm}
-\vspace{0.5\baselineskip}
-\lstset{backgroundcolor=\color{codeB}}
-\begin{lstlisting}
-x = vec[ N-1 ];
-N --;
-\end{lstlisting}
-\end{minipage}
-\\
-
-\begin{minipage}{7cm}
-\vspace{0.5\baselineskip}
-\lstset{backgroundcolor=\color{codeA}}
-\begin{lstlisting}
-vec[ N-1 ] = y;
-\end{lstlisting}
-\end{minipage}
-&
-\textit{waiting to exectue}
-\end{tabular}
-\end{center}
-\caption{Data sharing without mutex protection}
-\label{fig:nomutex}
-\end{figure}
-
-We have created a possible race condition. The result in this case is that
-thread $B$ reads an invalid element from the vector, and thread $A$
-overwrites an already existing element, which is not what we wanted.
-
-The solution is to only let one thread have access to the vector at a
-time. This is done with mutex objects (mutex stands for \textit{mutual
-exclusion}). The proper use of mutexes eliminates race conditions. To
-create a mutex object in \GLFW , you use the function
-\textbf{glfwCreateMutex}:
-
-\begin{lstlisting}
-GLFWmutex glfwCreateMutex( void )
-\end{lstlisting}
-
-\textbf{glfwCreateMutex} returns NULL if a mutex object could not be
-created, otherwise a mutex handle is returned. To destroy a mutex object
-that is no longer in use, call \textbf{glfwDestroyMutex}:
-
-\begin{lstlisting}
-void glfwDestroyMutex( GLFWmutex mutex )
-\end{lstlisting}
-
-Mutex objects by themselves do not contain any useful data. They act as a
-lock to any arbitrary data. Any thread can lock access to the data using
-the function \textbf{glfwLockMutex}:
-
-\begin{lstlisting}
-void glfwLockMutex( GLFWmutex mutex )
-\end{lstlisting}
-
-The argument \textit{mutex} is the mutex handle that was obtained when
-creating the mutex. \textbf{glfwLockMutex} will block the calling thread
-until the specified mutex is available (which will be immediately, if no
-other thread has locked it).
-
-Once a mutex has been locked, no other thread is allowed to lock the
-mutex. Only one thread at a time can get access to the mutex, and only the
-thread that has locked the mutex may use or manipulate the data which the
-mutex protects. To unlock a mutex, the thread calls
-\textbf{glfwUnlockMutex}:
-
-\begin{lstlisting}
-void glfwUnlockMutex( GLFWmutex mutex )
-\end{lstlisting}
-
-As soon as \textbf{glfwUnlockMutex} has been called, other threads may
-lock it again.
-
-Figure \ref{fig:withmutex} shows the scenario with the two threads
-trying to access the same vector, but this time they use a mutex object
-(\textit{vecmutex}).
-
-\begin{figure}[p]
-\begin{center}
-\begin{tabular}{cc}
-\textbf{Thread A} & \textbf{Thread B}\\
-\begin{minipage}{7cm}
-\lstset{backgroundcolor=\color{codeA}}
-\vspace{0.5\baselineskip}
-\begin{lstlisting}
-glfwLockMutex( vecmutex );
-N ++;
-\end{lstlisting}
-\end{minipage}
-&
-\textit{waiting to exectue}
-\\
-
-\textit{waiting to exectue}
-&
-\begin{minipage}{7cm}
-\vspace{0.5\baselineskip}
-\lstset{backgroundcolor=\color{codeB}}
-\begin{lstlisting}
-glfwLockMutex( vecmutex );
-\end{lstlisting}
-\end{minipage}
-\\
-
-\begin{minipage}{7cm}
-\vspace{0.5\baselineskip}
-\lstset{backgroundcolor=\color{codeA}}
-\begin{lstlisting}
-vec[ N-1 ] = y;
-glfwUnlockMutex( vecmutex );
-\end{lstlisting}
-\end{minipage}
-&
-\textit{waiting to exectue}
-\\
-
-\textit{waiting to exectue}
-&
-\begin{minipage}{7cm}
-\vspace{0.5\baselineskip}
-\lstset{backgroundcolor=\color{codeB}}
-\begin{lstlisting}
-x = vec[ N-1 ];
-N --;
-glfwUnlockMutex( vecmutex );
-\end{lstlisting}
-\end{minipage}
-\end{tabular}
-\end{center}
-\caption{Data sharing with mutex protection}
-\label{fig:withmutex}
-\end{figure}
-
-In this example, thread $A$ successfully obtains a lock on the mutex and
-directly starts modifying the vector data. Next, thread $B$ \textit{tries}
-to get a lock on the mutex, but is placed on hold since thread $A$ has
-already locked the mutex. Thread $A$ is free to continue its work, and
-when it is done it unlocks the mutex. \textit{Now} thread $B$ locks the
-mutex and gains exclusive access to the vector data, performs its work,
-and finally unlocks the mutex.
-
-The race condition has been avoided, and the code performs as expected.
-
-
-%-------------------------------------------------------------------------
-\section{Thread Synchronization Using Condition Variables}
-\label{par:condvar}
-Now you know how to create threads and how to safely exchange data between
-threads, but there is one important thing left to solve for multi threaded
-programs: conditional waits. Very often it is necessary for one thread to
-wait for a condition that will be satisfied by another thread.
-
-For instance, a thread~$A$ may need to wait for both thread~$B$ and
-thread~$C$ to finish a certain task before it can continue. For starters,
-we can create a mutex protecting a variable holding the number of
-completed threads:
-
-\begin{lstlisting}
-GLFWmutex mutex;
-int threadsdone;
-\end{lstlisting}
-
-Now, thread~$B$ and $C$ will lock the mutex and increase the
-\textit{threadsdone} variable by one when they are done, and then unlock
-the mutex again. Thread~$A$ can lock the mutex and check if threadsdone
-is equal to 2.
-
-If we assume that \textit{mutex} has been created successfully, the code
-for the three threads ($A$, $B$ and $C$) could be the following:
-
-\begin{mysamepage}[8]
-Thread~$A$: Wait for both thread~$B$ and $C$ to finish.
-\lstset{backgroundcolor=\color{codeA}}
-\begin{lstlisting}
-do
-{
-    glfwLockMutex( mutex );
-    done = (threadsdone == 2);
-    glfwUnlockMutex( mutex );
-}
-while( !done );
-\end{lstlisting}
-\end{mysamepage}
-
-\begin{mysamepage}[4]
-Thread~$B$ and $C$: Tell thread~$A$ that I am done.
-\lstset{backgroundcolor=\color{codeB}}
-\begin{lstlisting}
-glfwLockMutex( mutex );
-threadsdone ++;
-glfwUnlockMutex( mutex );
-\end{lstlisting}
-\lstset{backgroundcolor=\color{code}}
-\end{mysamepage}
-
-The problem is that when thread~$A$ discovers that thread~$B$ and $C$ are
-not done, it needs to check \textit{threadsdone} over and over again until
-\textit{threadsdone} is 2. We have created a busy waiting loop!
-
-The method will work without a doubt, but thread~$A$ will consume a lot of
-CPU power doing nothing. What we need is a way for thread~$A$ to halt
-until thread~$B$ or $C$ tells it to re-evaluate the conditions again. This
-is exactly what condition variables do.
-
-\GLFW\ supports three condition variable operations: wait, signal and
-broadcast. One or more threads may wait to be woken up on a condition, and
-one or more threads may signal or broadcast a condition. The difference
-between signal and broadcast is that broadcasting a condition wakes up all
-waiting threads (in an unspecified order, which is decided by task
-scheduling rules), while signaling a condition only wakes up one waiting
-thread (again, which one is unspecified).
-
-An important property of condition variables, which separates them from
-other signaling objects such as events, is that only \textit{currently
-waiting} threads are affected by a condition. A condition is ``forgotten''
-as soon as it has been signaled or broadcasted. That is why a condition
-variable is always associated with a mutex, which protects additional
-condition information, such as the ``done'' variable construct described
-above.
-
-This may all be confusing at first, but you will see that condition
-variables are both simple and powerful. They can be used to construct more
-abstract objects such as semaphores, events or gates (which is why \GLFW\
-does not support semaphores natively, for instance).
-
-Before we go on by solving the busy waiting scenario, let us go through
-the \GLFW\ condition variable functions. Just like for mutexes, you can
-create and destroy condition variable objects. The functions for doing
-this are \textbf{glfwCreateCond} and \textbf{glfwDestroyCond}:
-
-\begin{lstlisting}
-GLFWcond glfwCreateCond( void )
-\end{lstlisting}
-
-\begin{lstlisting}
-void glfwDestroyCond( GLFWcond cond )
-\end{lstlisting}
-
-\textbf{glfwCreateCond} returns NULL if a condition variable object could
-not be created, otherwise a condition variable handle is returned. To
-destroy a condition variable that is no longer in use, call
-\textbf{glfwDestroyCond}.
-
-To wait for a condition variable, you use \textbf{glfwWaitCond}, which has
-the C syntax:
-
-\begin{lstlisting}
-void glfwWaitCond( GLFWcond cond, GLFWmutex mutex, double timeout )
-\end{lstlisting}
-
-When \textbf{glfwWaitCond} is called, the locked mutex specified by
-\textit{mutex} will be unlocked, and the thread will be placed in a wait
-state until it receives the condition \textit{cond}. As soon as the
-waiting thread is woken up, the mutex \textit{mutex} will be locked again.
-If \textit{timeout} is GLFW\_INFINITY, \textbf{glfwWaitCond} will wait
-until the condition \textit{cond} is received. If \textit{timemout} is a
-positive time (in seconds), \textbf{glfwWaitCond} will wait until the
-condition cond is received or the specified time has passed.
-
-To signal or broadcast a condition variable, you use the functions
-\textbf{glfwSignalCond} and \textbf{glfwBroadcastCond}, respectively:
-
-\begin{lstlisting}
-void glfwSignalCond( GLFWcond cond )
-\end{lstlisting}
-
-\begin{lstlisting}
-void glfwBroadcastCond( GLFWcond cond )
-\end{lstlisting}
-
-\textbf{glfwSignalCond} will wake up one threads that is waiting for the
-condition \textit{cond}. \textbf{glfwBroadcastCond} will wake up all
-threads that are waiting for the condition cond.
-
-Now that we have the tools, let us see what we can do to solve the busy
-waiting situation. First, we add a condition variable to our data set:
-
-\begin{lstlisting}
-GLFWcond  cond;
-GLFWmutex mutex;
-int threadsdone;
-\end{lstlisting}
-
-If we assume that \textit{mutex} and \textit{cond} have been created
-successfully, the code for the three threads ($A$, $B$ and $C$) could be
-the following:
-
-\begin{mysamepage}[12]
-Thread~$A$: Wait for both thread~$B$ and $C$ to finish.
-\lstset{backgroundcolor=\color{codeA}}
-\begin{lstlisting}
-glfwLockMutex( mutex );
-do
-{
-    done = (threadsdone == 2);
-    if( !done )
-    {
-        glfwWaitCond( cond, mutex, GLFW_INFINITY );
-    }
-}
-while( !done );
-glfwUnlockMutex( mutex );
-\end{lstlisting}
-\end{mysamepage}
-
-\begin{mysamepage}[6]
-Thread~$B$ and $C$: Tell thread~$A$ that I am done.
-\lstset{backgroundcolor=\color{codeB}}
-\begin{lstlisting}
-glfwLockMutex( mutex );
-threadsdone ++;
-glfwUnlockMutex( mutex );
-glfwSignalCond( cond );
-\end{lstlisting}
-\lstset{backgroundcolor=\color{code}}
-\end{mysamepage}
-
-With the addition of a condition variable, the busy waiting loop turned
-into a nice condition waiting loop, and thread~$A$ no longer wastes any
-CPU time. Also note that the mutex locking and unlocking is moved outside
-of the waiting loop. This is because \textbf{glfwWaitCond} effectively
-performs the necessary mutex locking and unlocking for us.
-
-
-%-------------------------------------------------------------------------
-\section{Calling GLFW Functions From Multiple Threads}
-The current release of \GLFW\ is not 100\% thread safe. In other words,
-most \GLFW\ functions may cause conflicts and undefined behaviour if they
-are called from different threads.
-
-To avoid conflicts, only the following \GLFW\ API functions should be
-regarded as thread safe (i.e. they can be called from any thread at any
-time):
-
-\begin{enumerate}
-\item All functions that deal with threads, mutexes and condition
-      variables (e.g. \textbf{glfwCreateThread}, \textbf{glfwLockMutex}
-      etc).
-\item The timing function \textbf{glfwSleep}.
-\end{enumerate}
-
-All other \GLFW\ API function calls should be done from a single thread.
-This also makes for better future compatibility, since future versions of
-\GLFW\ may implement per thread window contexts (much in the same way as
-\OpenGL\ has per thread rendering contexts), for instance.
 
 
 %-------------------------------------------------------------------------
