--- a/docs/glfwrm.tex
+++ b/docs/glfwrm.tex
@@ -468,10 +468,10 @@ settings, which can result in suboptimal operation. The monitor may be
 unable to display the resulting video signal, or in the worst case it may
 even be damaged!
 
-If you wish to create a context with OpenGL version 3.0 or above you have
-to set the GLFW\_OPENGL\_VERSION\_MAJOR and GLFW\_OPENGL\_VERSION\_MINOR
-hints accordingly. If you don't, the highest possible OpenGL version for a
-context is 2.1.
+If you want to create a context with OpenGL version 3.0 or above you have to
+set the GLFW\_OPENGL\_VERSION\_MAJOR and GLFW\_OPENGL\_VERSION\_MINOR hints
+accordingly. If you don't do this, the highest OpenGL version available for a
+context is 2.1 or lower.
 \end{refnotes}
 
 
