--- a/docs/glfwrm.tex
+++ b/docs/glfwrm.tex
@@ -485,10 +485,9 @@ settings, which can result in suboptimal operation. The monitor may be
 unable to display the resulting video signal, or in the worst case it may
 even be damaged!
 
-If you want to create a context with OpenGL version 3.0 or above you have to
+If you want to create a context for OpenGL version 3.0 or above you must
 set the GLFW\_OPENGL\_VERSION\_MAJOR and GLFW\_OPENGL\_VERSION\_MINOR hints
-accordingly. If you don't do this, the highest OpenGL version available for a
-context is 2.1 or lower.
+accordingly. If you do not, the highest OpenGL version possible will be 2.1.
 \end{refnotes}
 
 
