--- a/docs/glfwrm.tex
+++ b/docs/glfwrm.tex
@@ -478,8 +478,8 @@ then all hints are reset to their default values.
 In order to determine the actual properties of an opened window, use
 \textbf{glfwGetWindowParam} (after the window has been opened).
 
-GLFW\_STEREO is a hard constraint. If stereo rendering is requested, but
-no stereo rendering capable pixel formats / visuals are available,
+GLFW\_STEREO is a hard constraint. If stereo rendering is requested, but no
+stereo rendering capable pixel formats / framebuffer configs are available,
 \textbf{glfwOpenWindow} will fail.
 
 The GLFW\_REFRESH\_RATE property should be used with caution. Most
