--- a/docs/glfwrm.tex
+++ b/docs/glfwrm.tex
@@ -99,7 +99,7 @@ to remedy this by providing the following functionality:
 \item Opening and managing an \OpenGL\ window.
 \item Keyboard, mouse and joystick input.
 \item A high precision timer.
-\item Multi threading support.
+\item Multi-threading support.
 \item Support for querying and using \OpenGL\ extensions.
 \item Image file loading support.
 \end{itemize}
